bug fix-overlay screen button align

--- a/static/dash.css
+++ b/static/dash.css
@@ -52,6 +52,7 @@ img
 {
  padding: 20px;
  margin-left: 70px;
+ margin-top: 40px;
 }
 .lend{
   border: none;
@@ -83,7 +84,7 @@ img
   .overlay-content {
     /* margin-bottom: 40px; */
     position: relative;
-    top: 25%; /* 25% from the top */
+    top: 50%; /* 50% from the top */
     width: 100%; /* 100% width */
     text-align: center; /* Centered text/links */
     margin-top: 30px; /* 30px top margin to avoid conflict with the close button on smaller screens */
